--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "@react-native-firebase/firestore": "^21.10.0",
     "@react-native-firebase/messaging": "^21.10.0",
     "@react-native/gradle-plugin": "^0.77.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "react": "18.3.1",
     "react-native": "^0.77.0",
     "react-native-push-notification": "^8.1.1",
-    "react-native-svg": "^15.11.1"
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.7.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,6 +42,8 @@
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.7.0",
