--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-community/slider": "^4.5.5",
     "@react-native-firebase/app": "^21.10.0",
     "@react-native-firebase/auth": "^21.10.0",
     "@react-native-firebase/firestore": "^21.10.0",
@@ -22,6 +23,8 @@
     "@react-navigation/stack": "^7.1.1",
     "react": "18.3.1",
     "react-native": "^0.77.0",
+    "react-native-asset": "^2.1.1",
+    "react-native-permissions": "^5.2.5",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.7.0",
@@ -42,6 +45,7 @@
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.0.0",
