--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.7.0",
     "react-native-svg": "^15.11.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
