--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.7.0",
+    "react-native-share": "^12.0.9",
     "react-native-svg": "^15.11.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0"
