--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.3.1",
     "react-native": "^0.77.0",
     "react-native-asset": "^2.1.1",
+    "react-native-modal": "^13.0.1",
     "react-native-permissions": "^5.2.5",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
